--- a/newtabcss.css
+++ b/newtabcss.css
@@ -19,12 +19,14 @@ th, td {
 {
     background-color:oldlace;
 }
-ul{ margin-left: 20cm;
+ul{ 
+    margin-left: 20cm;
     padding-left: 10cm;
     text-align: left;
-list-style-type: none;
-margin: 0;
-padding: 0;}
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
 .todoList li{
     position: relative;
@@ -32,12 +34,14 @@ padding: 0;}
     height: 45px;
     line-height: 45px;
     margin-bottom: 8px;
-    background: #f2f2f2;
+    background: #F2F2F2;
     border-radius: 3px;
     padding: 0 15px;
     cursor: default;
     overflow: hidden;
   }
-body{
-    background-image: url("bg.jpg");;
+
+
+body {
+    background-image: url("bg.jpg");
 }
